--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
             var url = 'https://graph.facebook.com/v2.8/?ids=' + pageID + "_" + postID + '&fields=' + reactions + '&access_token=' + access_token;
             console.log(url);
     	$.getJSON(url, function(res){
-    		v1.text(defaultCount + res[postID].reactions_like.summary.total_count);
-    		v2.text(defaultCount + res[postID].reactions_love.summary.total_count);
-            v3.text(defaultCount + res[postID].reactions_sad.summary.total_count);
-            v4.text(defaultCount + res[postID].reactions_haha.summary.total_count);
-            v5.text(defaultCount + res[postID].reactions_angry.summary.total_count);
-            v6.text(defaultCount + res[postID].reactions_wow.summary.total_count);
+    		v1.text(defaultCount + res[postID + '_' + postID].reactions_like.summary.total_count);
+    		v2.text(defaultCount + res[postID + '_' + postID].reactions_love.summary.total_count);
+            v3.text(defaultCount + res[postID + '_' + postID].reactions_sad.summary.total_count);
+            v4.text(defaultCount + res[postID + '_' + postID].reactions_haha.summary.total_count);
+            v5.text(defaultCount + res[postID + '_' + postID].reactions_angry.summary.total_count);
+            v6.text(defaultCount + res[postID + '_' + postID].reactions_wow.summary.total_count);
     	});
     }
 
